# node-grove-common-api

./: .gitignore  Makefile  go.mod  go.sum
constants/: topic.go
go/ng_proto/: actor.pb.go  common.pb.go  device.pb.go  event.pb.go  interactions.pb.go  notify.pb.go
go/proto/: actor.pb.go  common.pb.go  device.pb.go  event.pb.go  interactions.pb.go  ng_actor.pb.go  ng_common.pb.go  ng_device.pb.go  ng_driver.pb.go  ng_event.pb.go  ng_interactions.pb.go  ng_notify.pb.go  notify.pb.go
pb/actor/: actor.pb.go
pb/event/: event.pb.go
pb/queue/: interactions.pb.go  notify.pb.go  queue.pb.go
proto/: actor.proto  common.proto  device.proto  event.proto  interactions.proto  ng_actor.proto  ng_common.proto  ng_device.proto  ng_driver.proto  ng_event.proto  ng_interactions.proto  ng_notify.proto  notify.proto  queue.proto
proto/actor/: actor.proto
proto/event/: event.proto
proto/pb/event/: event.pb.go
proto/pb/queue/: queue.pb.go
proto/queue/: interactions.proto  notify.proto
rust/: Cargo.toml
rust/src/: lib.rs  ng_proto.rs  ng_proto.serde.rs
