[package]
name = "node-grove-common-api"
version = "0.0.7"
edition = "2021"
authors = ["shiyuecamus <shiyuecamus@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/shiyuecamus/node-grove-common-api.git"
description = "A common API for Node Grove"

[dependencies]
prost = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
