[package]
name = "node-grove-common-api"
version = "0.0.8"
edition = "2021"
authors = ["shiyuecamus <shiyuecamus@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/shiyuecamus/node-grove-common-api.git"
description = "A common API for Node Grove"

[dependencies]
prost = "0.13"
prost-types = { version = "0.13.4", features = ["default", "std"] }
prost-derive = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
pbjson = "0.7"
pbjson-types = "0.7"
